# qdl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
QDL.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
QDL_backup/: README.md  setup.py
QDL_backup/QDL.egg-info/: entry_points.txt  requires.txt
QDL_backup/qobuz_downloader/: cli.py  downloader.py  qopy.py
qobuz_downloader/: cli.py  color.py  commands.py  config.ini  core.py  db.py  downloader.py  format_config.ini  utils.py
