[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QDL"
version = "0.15.0"
description = "The complete Lossless and Hi-Res music downloader for Qobuz"
readme = "README.md"
authors = [
    {name = "dragonherb", email = "dragonherbdj@gmail.com"}
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pathvalidate",
    "requests",
    "mutagen",
    "tqdm",
    "pick==1.6.0",
    "beautifulsoup4",
    "colorama",
    "googlesearch-python>=1.3.0",
    "keyboard",
]

[project.scripts]
QDL = "qobuz_downloader:main"
qdl = "qobuz_downloader:main"
